objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__Action__c</fullName>
        <description>The action desired for this line item with values of Add, Change, Existing or Disconnect. Existing means no change is requested. Add is a request to add the item, Change is a request to change it. Disconnect is a request to remove it.</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Disconnect</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__AdjustmentComments__c</fullName>
        <label>AdjustmentComments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeMetadataChanges__c</fullName>
        <label>Attribute Metadata Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeSelectedValues__c</fullName>
        <label>Attribute Selected Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributesData__c</fullName>
        <label>Attributes Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CalculatedPriceJSON__c</fullName>
        <description>Calculated Price Data JSON</description>
        <label>CalculatedPriceJSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClassCodes__c</fullName>
        <label>Class Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContractCode__c</fullName>
        <label>Contract Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EnrollmentEndDate__c</fullName>
        <label>Enrollment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EnrollmentStartDate__c</fullName>
        <label>Enrollment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EnrollmentWaitingPeriod__c</fullName>
        <label>Enrollment Waiting Period</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FormularyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Formulary</label>
        <referenceTo>vlocity_ins__Formulary__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>QuoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GroupCensusId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Census</label>
        <referenceTo>vlocity_ins__GroupCensus__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>QuoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GroupClassId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Class</label>
        <referenceTo>vlocity_ins__GroupClass__c</referenceTo>
        <relationshipLabel>Quoted Plans</relationshipLabel>
        <relationshipName>QuoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GroupClassName__c</fullName>
        <formula>vlocity_ins__GroupClassId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Class Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InCartQuantityMap__c</fullName>
        <description>JSON field calculated by Vlocity with the following structure: {&quot;[childProductId]&quot;: [quantity], ....} that describes the child item quantities that roll-up to the quantity of this item. For example, {&quot;01t0O00000BPrs1QAD&quot;:1,&quot;01t0O00000BPrrwQAD&quot;:1}. The quantity value is the sum of quantities for that product across all instances on the child items. For example, if two child assets exist of type Product A, the first with quantity 2 and the second with quantity 1, the map quantity for Product A should be 3. Helps CPQ identify quantities and enforce cardinality rules. Populated for all items that have direct children, but it is not populated for virtual products or items with no children. Also, child virtual products are not included in the map on their parent item.</description>
        <label>InCartQuantityMap</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InsurableItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurable Item</label>
        <referenceTo>vlocity_ins__InsurableItem__c</referenceTo>
        <relationshipLabel>Quote Items</relationshipLabel>
        <relationshipName>QuoteItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsProductTrackAgreement__c</fullName>
        <description>Denotes if product is tracked as part of agreement</description>
        <formula>Product2.vlocity_ins__TrackAsAgreement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Product Track Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ItemName__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__JSONAttribute__c</fullName>
        <description>JSON body containing Vlocity Attribute value data.</description>
        <label>JSONAttribute</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LineNumber__c</fullName>
        <description>Vlocity line number generated by code which serves to sequence the line items and organize them into a hierarchy.</description>
        <label>Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentItemId2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Item Id</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Quote Line Items (Parent Item Id)</relationshipLabel>
        <relationshipName>ParentItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentItemId__c</fullName>
        <description>ID of the parent Quote Line Item. Used by Vlocity CPQ to track the hierarchy of Items.</description>
        <label>ParentItemId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingLogData__c</fullName>
        <description>Detailed pricing log information for this item stored as a JSON structure. The JSON records the detailed prices, adjustments and interim calculations which result in the price to the customer.</description>
        <label>Pricing Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingSource__c</fullName>
        <formula>Product2.vlocity_ins__PricingSource__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryChildLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Child Line Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Primary Child Line Items</relationshipLabel>
        <relationshipName>PrimaryChildLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductChildItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Child Item</label>
        <referenceTo>vlocity_ins__ProductChildItem__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>QuoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductChildItemSequence__c</fullName>
        <formula>vlocity_ins__ProductChildItemId__r.vlocity_ins__SeqNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Child Item Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductHierarchyPath__c</fullName>
        <description>Vlocity internal field which identifies the path for this item within the product hierarchy.</description>
        <label>Product Hierarchy Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProviderNetworkId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Network</label>
        <referenceTo>vlocity_ins__ProviderNetwork__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>QuoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProvisioningStatus__c</fullName>
        <description>(NOTE: The functionality of this field is replaced by the Action, Sub-Action and Fulfilment Status fields.) The desired provisioning action for the asset identified on this line item. Values include New (add), Active (no change), Changed or Deleted.</description>
        <label>Provisioning Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RateBandId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Band</label>
        <referenceTo>vlocity_ins__RateBand__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelationshipType__c</fullName>
        <label>RelationshipType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Child</fullName>
                    <default>true</default>
                    <label>Child</label>
                </value>
                <value>
                    <fullName>Realization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__RenewSourcePlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renew Source Plan</label>
        <referenceTo>vlocity_ins__ContractLineItem__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>RenewSourcePlan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RootItemId__c</fullName>
        <description>ID of the ultimate, top-level parent Quote Line Item. Used by Vlocity CPQ to track a full tree of items.</description>
        <label>RootItemId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SubAction__c</fullName>
        <description>The sub-action requested for this line item typically used for moves of service from one location to another with values of Move-Add and Move-Delete. Move-Add means this item is being added as part of the move and usually should be added before the previous service is disconnected. Move-Delete means this item is the service to be disconnected after the service is activated at the new location.</description>
        <label>Sub Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Move</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__SubParentItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Parent Item Id</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>SubParentItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalSumInsured__c</fullName>
        <label>Total Sum Insured</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>